--- a/index/Anya.html
+++ b/index/Anya.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Аня</title>
-    <link rel="stylesheet" href="Anya.css">
+    <link rel="stylesheet" href="../Anya.css">
 </head>
 <body>
     <div class="container">
         <span> <b>Привет, Аня!</b> Поздравляю тебя с 14 февраля, я не уверен, что обычно пишут в валентинках, поэтому, напишу всё самое хорошее. Поздравляю с 14 февраля, желаю счастья, здоровья, денег, удачи, всего самого лучшего, да. Желаю тебе найти своего братишкина или Дискорда). </span>
         <span style="font-size: 10px; color: lightskyblue;"> хотелось бы написать что-нибудь ещё, но к сожалению, я очень мало знаю(практически ничего) о том, что тебе нравится и в целом о тебе, я очень сильно извиняюсь.</span>
-        <img class="bratishkin" src="изображение_2024-02-13_184927632-removebg-preview.png" alt="">
-        <img class="pinky" src="240px-Pinkie-removebg-preview.png" alt="raduga">
-        <img class="discord" src="300px-Discord_MLP-removebg-preview.png" alt="">
+        <img class="bratishkin" src="../изображение_2024-02-13_184927632-removebg-preview.png" alt="">
+        <img class="pinky" src="../240px-Pinkie-removebg-preview.png" alt="raduga">
+        <img class="discord" src="../300px-Discord_MLP-removebg-preview.png" alt="">
     </div>    
 </body>
 </html>
