--- a/index/Dasha.html
+++ b/index/Dasha.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Даша</title>
-    <link rel="stylesheet" href="Dasha.css">
+    <link rel="stylesheet" href="../Dasha.css">
 </head>
 <body>
     <div class="container">
         <span> <b>Привет, Даша!</b> Поздравляю тебя с 14 февраля, я не уверен, что обычно пишут в валентинках, поэтому, напишу всё самое хорошее. Поздравляю с 14 февраля, желаю счастья, здоровья, денег, удачи, много книжек. Желаю тебе найти своего Петра I. </span>
-        <img class="petr1" src="изображение_2024-02-13_190546491-removebg-preview.png" alt="">
-        <img class="skarina" src="изображение_2024-02-13_190416421-removebg-preview.png" alt="">
-        <img class="cesar" src="imgonline-com-ua-Mirror-v8JZ65n4Xq-removebg-preview.png" alt="">
+        <img class="petr1" src="../изображение_2024-02-13_190546491-removebg-preview.png" alt="">
+        <img class="skarina" src="../изображение_2024-02-13_190416421-removebg-preview.png" alt="">
+        <img class="cesar" src="../imgonline-com-ua-Mirror-v8JZ65n4Xq-removebg-preview.png" alt="">
     </div>    
 </body>
 </html>
